# prime_XIAO_YUBIN

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  readthedocs.yml
docs/: Makefile  conf.py  example.ipynb  index.rst  make.bat  module.rst
src/prime_yx2764/: __init__.py  prime_yx2764.py
tests/: test_prime_yx2764.py
