[tool.poetry]
name = "prime_yx2764"
version = "0.1.0"
description = "A great package is like this!"
authors = ["Xiao Yubin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
